[gd_scene load_steps=3 format=3 uid="uid://dn5r6qogjyaco"]

[ext_resource type="Script" path="res://src/game/wepons/range/basic/basic_range_weapon.gd" id="1_0wld1"]
[ext_resource type="Script" path="res://src/game/components/spawn_projectile_component.gd" id="2_p77t0"]

[node name="BasicRangeWeapon" type="Node2D"]
z_index = 50
script = ExtResource("1_0wld1")

[node name="Sprite" type="Sprite2D" parent="."]

[node name="Tip" type="Marker2D" parent="."]
position = Vector2(7, 0)

[node name="FireRateTimer" type="Timer" parent="."]

[node name="ReloadTimer" type="Timer" parent="."]

[node name="SpawnProjectileComponent" type="Node" parent="."]
script = ExtResource("2_p77t0")

[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_rate_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
